--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,6 +18,9 @@
           <%= link_to "Nos propositions", proposals_path, class: "nav-link #{'active' if current_page?(proposals_path)}" %>
         </li>
         <li class="nav-item">
+          <%= link_to "Actualités", articles_path, class: "nav-link #{'active' if current_page?(articles_path)}" %>
+        </li>
+        <li class="nav-item">
           <%= link_to "Comment voter", how_to_vote_path, class: "nav-link #{'active' if current_page?(how_to_vote_path)}" %>
         </li>
         <li class="nav-item">
@@ -28,7 +31,7 @@
         </li>
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to "Admin", rails_admin_path, class: "nav-link" %>
+            <%= link_to "Admin", admin_root_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Déconnexion", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
