--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -2,14 +2,21 @@
 <% set_meta_tags title: 'Contact',
                   description: 'Contactez l\'équipe Tous bien intégrés - Liste MoDem pour les élections consulaires 2026.' %>
 
-<section class="page-header-simple">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 mx-auto text-center">
-        <h1>Contactez-nous</h1>
-        <p class="lead mb-0">
-          Nous sommes à votre écoute
-        </p>
+<section class="hero-photo" style="padding: 0rem;">
+  <div class="hero-photo__image">
+    <%= image_tag "about/team.jpg",
+                  alt: "Équipe Tous bien intégrés au Benelux",
+                  class: "w-100" %>
+  </div>
+  <div class="hero-photo__content">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8">
+          <h1>Contactez-nous</h1>
+          <p class="lead">
+            Nous sommes à votre écoute
+          </p>
+        </div>
       </div>
     </div>
   </div>
