--- a/app/views/pages/how_to_vote.html.erb
+++ b/app/views/pages/how_to_vote.html.erb
@@ -4,7 +4,7 @@
 
 <section class="hero-photo" style="padding: 0rem;">
   <div class="hero-photo__image">
-    <%= image_tag "about/team.jpg",
+    <%= image_tag "home/luxembourg1.jpg",
                   alt: "Équipe Tous bien intégrés au Benelux",
                   class: "w-100" %>
   </div>
