--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,8 +4,8 @@
 
 <section class="hero-photo" style="padding: 0rem;">
   <div class="hero-photo__image">
-    <%= image_tag "home/luxembourg.jpg",
-                  alt: "Équipe Tous bien intégrés au Benelux",
+    <%= image_tag "home/breton.jpg",
+                  alt: "",
                   class: "w-100" %>
   </div>
   <div class="hero-photo__content">
