--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,8 +4,8 @@
 
 <section class="hero-photo" style="padding: 0rem;">
   <div class="hero-photo__image">
-    <%= image_tag "about/team.jpg",
-                  alt: "Équipe Tous bien intégrés au Benelux",
+    <%= image_tag "about/team1.jpg",
+                  alt: "",
                   class: "w-100" %>
   </div>
   <div class="hero-photo__content">
