--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -5,7 +5,7 @@
 <section class="hero-photo" style="padding: 0rem;">
   <div class="hero-photo__image">
     <%= image_tag "about/team.jpg",
-                  alt: "Équipe Tous bien intégrés au Benelux",
+                  alt: "",
                   class: "w-100" %>
   </div>
   <div class="hero-photo__content">
