--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <%= javascript_importmap_tags %>
 
     <!-- Favicons -->
-    <%# <%= favicon_link_tag 'favicon.ico' %>
+    <%= render 'layouts/favicon' %>
 
     <!-- Skip to main content (accessibilité) -->
     <style>
