--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -1,15 +1,29 @@
 <!-- app/views/admin/articles/edit.html.erb -->
-<% set_meta_tags title: "Modifier l'article" %>
-
-<div class="container py-5">
+<div class="container-fluid py-4">
   <div class="row">
     <div class="col-lg-10 mx-auto">
-      <h1 class="h3 mb-4">
-        <i class="fas fa-edit me-2" aria-hidden="true"></i>
-        Modifier l'article
-      </h1>
+
+      <!-- Breadcrumb -->
+      <nav aria-label="breadcrumb" class="mb-4">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <%= link_to "Dashboard", admin_root_path %>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            Modifier l'article
+          </li>
+        </ol>
+      </nav>
+
+      <div class="d-flex justify-content-between align-items-center mb-4">
+        <h1 class="mb-0">Modifier l'article</h1>
+        <%= link_to "Voir l'article", article_path(@article),
+                    class: "btn btn-outline-primary",
+                    target: "_blank" if @article.published? %>
+      </div>
 
       <%= render 'form' %>
+
     </div>
   </div>
 </div>
