--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -1,15 +1,24 @@
 <!-- app/views/admin/articles/new.html.erb -->
-<% set_meta_tags title: 'Nouvel article' %>
-
-<div class="container py-5">
+<div class="container-fluid py-4">
   <div class="row">
     <div class="col-lg-10 mx-auto">
-      <h1 class="h3 mb-4">
-        <i class="fas fa-plus-circle me-2" aria-hidden="true"></i>
-        Nouvel article
-      </h1>
+
+      <!-- Breadcrumb -->
+      <nav aria-label="breadcrumb" class="mb-4">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <%= link_to "Dashboard", admin_root_path %>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            Nouvel article
+          </li>
+        </ol>
+      </nav>
+
+      <h1 class="mb-4">Créer un article</h1>
 
       <%= render 'form' %>
+
     </div>
   </div>
 </div>
