--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -373,7 +373,7 @@
                           <%= link_to article_path(article), class: 'btn btn-sm btn-outline-primary me-2', target: '_blank' do %>
                             <i class="fas fa-eye" aria-hidden="true"></i>
                           <% end %>
-                          <%= link_to edit_admin_article_path(article), class: 'btn btn-sm btn-outline-secondary' do %>
+                          <%= link_to edit_admin_article_path(article.id), class: 'btn btn-sm btn-outline-secondary' do %>
                             <i class="fas fa-edit" aria-hidden="true"></i>
                           <% end %>
                         </div>
@@ -408,7 +408,7 @@
                           </small>
                         </div>
                         <div>
-                          <%= link_to edit_admin_article_path(article), class: 'btn btn-sm btn-outline-secondary' do %>
+                          <%= link_to edit_admin_article_path(article.id), class: 'btn btn-sm btn-outline-secondary' do %>
                             <i class="fas fa-edit" aria-hidden="true"></i>
                           <% end %>
                         </div>
