--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -219,7 +219,7 @@
               </p>
 
               <p>
-                La campagne du Mouvement démocrate au Benelux sera une campagne ouverte,
+                La campagne du Mouvement démocrate au Benelux et de ses partenaires sera une campagne ouverte,
                 fidèle aux valeurs de notre famille centriste d'inspiration démocrate-chrétienne,
                 pragmatique, honnête et réaliste. Nous ne vous promettrons pas l'impossible,
                 nous ferons de notre mieux pour relayer les attentes et faciliter la vie quotidienne des
@@ -259,6 +259,13 @@
                 </p>
               </div>
             </div>
+
+                  <div class="mt-5 text-center">
+                    <%= link_to about_path(anchor: "candidats"), class: "btn btn-sm btn-outline-primary" do %>
+                      <i class="fas fa-users me-1" style="font-size: 0.85rem;"></i>
+                      Découvrir l'équipe
+                    <% end %>
+                  </div>
           </div>
         </div>
       </div>
