--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,13 +11,30 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <%= link_to "Qui sommes-nous", about_path, class: "nav-link #{'active' if current_page?(about_path)}" %>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle <%= 'active' if current_page?(about_path) %>"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Qui sommes-nous <i class="fas fa-chevron-down ms-1" style="font-size: 0.7rem;"></i>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Qui sommes-nous", about_path(anchor: "qui-sommes-nous"), class: "dropdown-item" %></li>
+            <li><%= link_to "Notre mission", about_path(anchor: "servir"), class: "dropdown-item" %></li>
+            <li><%= link_to "Notre spécificité", about_path(anchor: "specificite"), class: "dropdown-item" %></li>
+            <li><%= link_to "Les candidats", about_path(anchor: "candidats"), class: "dropdown-item" %></li>
+            <li><%= link_to "Nous rejoindre", about_path(anchor: "rejoindre"), class: "dropdown-item" %></li>
+          </ul>
         </li>
+
         <li class="nav-item">
           <%= link_to "Nos propositions", proposals_path, class: "nav-link #{'active' if current_page?(proposals_path)}" %>
         </li>
-        <li class="nav-item"> <%= link_to "Actualités", articles_path, class: "nav-link #{'active' if current_page?(articles_path)}" %> </li>
+        <li class="nav-item">
+          <%= link_to "Actualités", articles_path, class: "nav-link #{'active' if current_page?(articles_path)}" %>
+        </li>
         <li class="nav-item">
           <%= link_to "Comment voter", how_to_vote_path, class: "nav-link #{'active' if current_page?(how_to_vote_path)}" %>
         </li>
